--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -28,6 +28,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/capture_tcpdump_mobile" />
+
+    <Button
+        android:id="@+id/stop_capture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop Capture" />
     
     </LinearLayout>
 
