--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -33,7 +33,7 @@
         android:id="@+id/stop_capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stop Capture" />
+        android:text="@string/capture_stop" />
     
     </LinearLayout>
 
