added hapviewer rewrite for stream support

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -34,6 +34,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/capture_stop" />
+
+    <Button
+        android:id="@+id/libhapviz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="libhapviz test" />
     
     </LinearLayout>
 
