--- a/res/layout/hud.xml
+++ b/res/layout/hud.xml
@@ -3,12 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-	<org.anddev.andengine.opengl.view.RenderSurfaceView
-		android:id="@+id/view_graphlet"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:layout_centerInParent="true"
-		android:gravity="center" />
+    <org.anddev.andengine.opengl.view.RenderSurfaceView
+        android:id="@+id/view_graphlet"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center" />
+
+    <LinearLayout
+        android:id="@+id/timeline"
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/btn_file_open"
+        android:background="#DFFF" >
+        
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_file_open"
@@ -18,7 +30,6 @@
         android:layout_alignParentLeft="true"
         android:text="@string/file_open" />
 
-
     <Button
         android:id="@+id/btn_capture_start_stop"
         android:layout_width="wrap_content"
@@ -27,27 +38,15 @@
         android:layout_alignParentRight="true"
         android:text="@string/capture_start" />
 
-    <LinearLayout
-        android:id="@+id/timeline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignTop="@+id/btn_file_open"
-        android:layout_toLeftOf="@id/btn_capture_start_stop"
-        android:layout_toRightOf="@id/btn_file_open"
-        android:background="@drawable/gradient_grey" >
-
-    </LinearLayout>
-
     <TextView
         android:id="@+id/text_starttime"
-        android:textColor="#DDD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/btn_file_open"
         android:layout_alignBottom="@id/btn_file_open"
         android:layout_toRightOf="@id/btn_file_open"
-        android:text="@string/starttime" />
+        android:text="@string/starttime"
+        android:textColor="#000" />
 
     <TextView
         android:id="@+id/text_endtime"
@@ -57,6 +56,6 @@
         android:layout_alignBottom="@+id/btn_capture_start_stop"
         android:layout_toLeftOf="@+id/btn_capture_start_stop"
         android:text="@string/endtime"
-        android:textColor="#DDD" />
+        android:textColor="#000" />
 
 </RelativeLayout>
